// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#makeActivitiesWithSameRecentActivities should create a list of activities with no repeat_activity children 1`] = `
[
  {
    "_id": 530360285460147140,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 5,
    "dot_color": "#078C16",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/promo",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "74e6dc3c73a462f30ccdd877c41a90cb",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/promo",
      },
    ],
    "moment": "2021-11-22T12:16:42.423Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-22T07:16:42.423649",
  },
  {
    "_id": -1589039413316430800,
    "activity": "started_checkout",
    "activity_name": "Started Checkout",
    "activity_occurrence": 2,
    "dot_color": "#262C9B",
    "features": [
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "9d806547a07b9b89de54c10ab0ec4ec8st",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/checkout",
      },
    ],
    "moment": "2021-11-22T12:15:43.423Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-22T07:15:43.423649",
  },
  {
    "_id": 1025377082808353800,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 4,
    "dot_color": "#078C16",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/checkout",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "9d806547a07b9b89de54c10ab0ec4ec8",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/checkout",
      },
    ],
    "moment": "2021-11-22T12:15:42.423Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-22T07:15:42.423649",
  },
]
`;

exports[`#makeActivitiesWithSameRecentActivities should create a list of activities with repeat_activity children 1`] = `
[
  {
    "_id": -6266282755210350000,
    "activity": "viewed_product",
    "activity_name": "Added to Cart",
    "activity_occurrence": 3,
    "dot_color": "#F0A21D",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Product SKU",
        "value": "240",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "32ce1efdf04e16e027af5ea3d3b1c8c6",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": null,
      },
    ],
    "moment": "2021-11-01T10:59:27.914Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-01T06:59:27.914897",
  },
  {
    "_id": -6862073527046626000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 10,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/product",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "32ce1efdf04e16e027af5ea3d3b1c8c6",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/product",
      },
    ],
    "moment": "2021-11-01T10:59:26.914Z",
    "repeated_activities": [
      {
        "_id": -6862073527046626000,
        "activity": "viewed_page",
        "activity_name": "Viewed Website",
        "activity_occurrence": 10,
        "dot_color": "#FF6802",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Ad Source",
            "value": "/product",
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Referring Domain",
            "value": null,
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Device",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "32ce1efdf04e16e027af5ea3d3b1c8c6",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": "www.example.com/product",
          },
        ],
        "moment": "2021-11-01T10:59:26.914Z",
        "revenue_impact": null,
        "ts": "2021-11-01T06:59:26.914897",
      },
      {
        "_id": 5007573080340414000,
        "activity": "viewed_page",
        "activity_name": "Viewed Website",
        "activity_occurrence": 9,
        "dot_color": "#FF6802",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Ad Source",
            "value": "/home",
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Referring Domain",
            "value": null,
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Device",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "388a9c0bc454324a6cd829562a0a3863",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": "www.example.com/home",
          },
        ],
        "moment": "2021-11-01T10:55:26.914Z",
        "revenue_impact": null,
        "ts": "2021-11-01T06:55:26.914897",
      },
    ],
    "revenue_impact": null,
    "ts": "2021-11-01T06:59:26.914897",
  },
  {
    "_id": 6957976457450277000,
    "activity": "started_checkout",
    "activity_name": "Started Checkout",
    "activity_occurrence": 1,
    "dot_color": "#151977",
    "features": [
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "794f821ac8344f69bff77527793fb5dfst",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/checkout",
      },
    ],
    "moment": "2021-11-01T10:54:27.914Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-01T06:54:27.914897",
  },
  {
    "_id": -2878034322310197000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 8,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/checkout",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "794f821ac8344f69bff77527793fb5df",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/checkout",
      },
    ],
    "moment": "2021-11-01T10:54:26.914Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-01T06:54:26.914897",
  },
  {
    "_id": -7316127692543178000,
    "activity": "viewed_product",
    "activity_name": "Added to Cart",
    "activity_occurrence": 2,
    "dot_color": "#F0A21D",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Product SKU",
        "value": "20",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "e9f4b26b19f407191bd2c859a738c29b",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": null,
      },
    ],
    "moment": "2021-11-01T10:54:25.914Z",
    "repeated_activities": [
      {
        "_id": -7316127692543178000,
        "activity": "viewed_product",
        "activity_name": "Added to Cart",
        "activity_occurrence": 2,
        "dot_color": "#F0A21D",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Product SKU",
            "value": "20",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "e9f4b26b19f407191bd2c859a738c29b",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": null,
          },
        ],
        "moment": "2021-11-01T10:54:25.914Z",
        "revenue_impact": null,
        "ts": "2021-11-01T06:54:25.914897",
      },
      {
        "_id": 19598251358866384,
        "activity": "viewed_product",
        "activity_name": "Added to Cart",
        "activity_occurrence": 1,
        "dot_color": "#F0A21D",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Product SKU",
            "value": "70",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "6dc2a523836fe3788cf0aa08fdf6a751",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": "www.example.com/product",
          },
        ],
        "moment": "2021-11-01T10:54:25.914Z",
        "revenue_impact": null,
        "ts": "2021-11-01T06:54:25.914897",
      },
    ],
    "revenue_impact": null,
    "ts": "2021-11-01T06:54:25.914897",
  },
  {
    "_id": 2813883599193387000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 7,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/product",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "e9f4b26b19f407191bd2c859a738c29b",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/product",
      },
    ],
    "moment": "2021-11-01T10:54:24.914Z",
    "repeated_activities": [
      {
        "_id": 2813883599193387000,
        "activity": "viewed_page",
        "activity_name": "Viewed Website",
        "activity_occurrence": 7,
        "dot_color": "#FF6802",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Ad Source",
            "value": "/product",
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Referring Domain",
            "value": null,
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Device",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "e9f4b26b19f407191bd2c859a738c29b",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": "www.example.com/product",
          },
        ],
        "moment": "2021-11-01T10:54:24.914Z",
        "revenue_impact": null,
        "ts": "2021-11-01T06:54:24.914897",
      },
      {
        "_id": 511417195641141400,
        "activity": "viewed_page",
        "activity_name": "Viewed Website",
        "activity_occurrence": 6,
        "dot_color": "#FF6802",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Ad Source",
            "value": "/promo",
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Referring Domain",
            "value": null,
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Device",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "5842bb0663900a4e0bbe92fd24f71f23",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": "www.example.com/promo",
          },
        ],
        "moment": "2021-11-01T10:52:26.914Z",
        "revenue_impact": null,
        "ts": "2021-11-01T06:52:26.914897",
      },
      {
        "_id": 4717342921032903000,
        "activity": "viewed_page",
        "activity_name": "Viewed Website",
        "activity_occurrence": 5,
        "dot_color": "#FF6802",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Ad Source",
            "value": "/promo",
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Referring Domain",
            "value": null,
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Device",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "bfe7c673c7b61cbbe43b2416e7692ce9",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": "www.example.com/promo",
          },
        ],
        "moment": "2021-11-01T10:52:26.914Z",
        "revenue_impact": null,
        "ts": "2021-11-01T06:52:26.914897",
      },
      {
        "_id": 6231407018474217000,
        "activity": "viewed_page",
        "activity_name": "Viewed Website",
        "activity_occurrence": 4,
        "dot_color": "#FF6802",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Ad Source",
            "value": "/home",
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Referring Domain",
            "value": null,
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Device",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "66d92d2bda89f0ea8821d1efc844d32c",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": "www.example.com/home",
          },
        ],
        "moment": "2021-11-01T10:50:26.914Z",
        "revenue_impact": null,
        "ts": "2021-11-01T06:50:26.914897",
      },
      {
        "_id": -9179941361148418000,
        "activity": "viewed_page",
        "activity_name": "Viewed Website",
        "activity_occurrence": 3,
        "dot_color": "#FF6802",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Ad Source",
            "value": "/home",
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Referring Domain",
            "value": null,
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Device",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "0fbaee2b01ea72c51efd2eb7d75c2eeb",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": "www.example.com/home",
          },
        ],
        "moment": "2021-11-01T10:47:26.914Z",
        "revenue_impact": null,
        "ts": "2021-11-01T06:47:26.914897",
      },
      {
        "_id": 4651388284614795000,
        "activity": "viewed_page",
        "activity_name": "Viewed Website",
        "activity_occurrence": 2,
        "dot_color": "#FF6802",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Ad Source",
            "value": "/promo",
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Referring Domain",
            "value": null,
          },
          {
            "for_copy": false,
            "for_link": false,
            "label": "Device",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "f60841c312370e0282a6e99f9bf12bac",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": "www.example.com/promo",
          },
        ],
        "moment": "2021-11-01T10:46:26.914Z",
        "revenue_impact": null,
        "ts": "2021-11-01T06:46:26.914897",
      },
    ],
    "revenue_impact": null,
    "ts": "2021-11-01T06:54:24.914897",
  },
  {
    "_id": 942420535372713100,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 1,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/promo",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "a11ea5e01d697a6302d428e44c348807",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/promo",
      },
    ],
    "moment": "2021-11-01T10:39:26.914Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-01T06:39:26.914897",
  },
  {
    "_id": 5174973746959827000,
    "activity": "started_session",
    "activity_name": "Started Session",
    "activity_occurrence": 1,
    "dot_color": "#E3DE71",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring domain",
        "value": "reddit",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": "desktop",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "095f6014de3692b0f4841d7a152b5c27",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "/product",
      },
    ],
    "moment": "2021-11-01T10:31:26.914Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-01T06:31:26.914897",
  },
]
`;

exports[`#makeActivitiesWithSameRecentActivities should create a list of ascending activities with repeat_activity children 1`] = `
[
  {
    "_id": 510388303776837440,
    "activity": "employee_viewed_webpage",
    "activity_name": "Employee Viewed Webpage",
    "activity_occurrence": 3,
    "customer": "zboncak_feest_and_koss",
    "dot_color": "#BB20B9",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Path",
        "value": "/careers",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "3eb6e10a809729a1d871ec300f826158",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Page URL",
        "value": "www.narrator-demo.com/careers",
      },
    ],
    "moment": "2021-11-22T12:01:34.000Z",
    "repeated_activities": [
      {
        "_id": 510388303776837440,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 3,
        "customer": "zboncak_feest_and_koss",
        "dot_color": "#BB20B9",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/careers",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "3eb6e10a809729a1d871ec300f826158",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/careers",
          },
        ],
        "moment": "2021-11-22T12:01:34.000Z",
        "revenue_impact": null,
        "ts": "2021-11-22T07:01:34",
      },
      {
        "_id": 1707366435833704700,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 2,
        "customer": "zboncak_feest_and_koss",
        "dot_color": "#BB20B9",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "dae0b8a1d4992a73a2ea076c2ca89d2a",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2021-11-22T11:58:34.000Z",
        "revenue_impact": null,
        "ts": "2021-11-22T06:58:34",
      },
      {
        "_id": 3021783354321177000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 1,
        "customer": "zboncak_feest_and_koss",
        "dot_color": "#BB20B9",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "51787cdb3f06de5e062bbed53ab10ae0",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2021-11-22T11:55:34.000Z",
        "revenue_impact": null,
        "ts": "2021-11-22T06:55:34",
      },
    ],
    "revenue_impact": null,
    "ts": "2021-11-22T07:01:34",
  },
]
`;

exports[`#makeActivitiesWithSameRecentActivities should create a list of customer activities with repeat_activity children 1`] = `
[
  {
    "_id": 1193347304332839400,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 5,
    "dot_color": "#570771",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/promo",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "74e6dc3c73a462f30ccdd877c41a90cb",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/promo",
      },
    ],
    "moment": "2021-11-22T12:16:42.423Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-22T07:16:42.423649",
  },
  {
    "_id": 8465653038183490000,
    "activity": "started_checkout",
    "activity_name": "Started Checkout",
    "activity_occurrence": 2,
    "dot_color": "#DB7D3E",
    "features": [
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "9d806547a07b9b89de54c10ab0ec4ec8st",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/checkout",
      },
    ],
    "moment": "2021-11-22T12:15:43.423Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-22T07:15:43.423649",
  },
  {
    "_id": -5981677064005818000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 4,
    "dot_color": "#570771",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/checkout",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "9d806547a07b9b89de54c10ab0ec4ec8",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/checkout",
      },
    ],
    "moment": "2021-11-22T12:15:42.423Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-22T07:15:42.423649",
  },
  {
    "_id": -9072856448325055000,
    "activity": "viewed_product",
    "activity_name": "Added to Cart",
    "activity_occurrence": 4,
    "dot_color": "#FBE78C",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Product SKU",
        "value": "210",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "1c822faae711a75c61d5c86b495f87b4",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": null,
      },
    ],
    "moment": "2021-11-22T12:15:41.423Z",
    "repeated_activities": [
      {
        "_id": -9072856448325055000,
        "activity": "viewed_product",
        "activity_name": "Added to Cart",
        "activity_occurrence": 4,
        "dot_color": "#FBE78C",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Product SKU",
            "value": "210",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "1c822faae711a75c61d5c86b495f87b4",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": null,
          },
        ],
        "moment": "2021-11-22T12:15:41.423Z",
        "revenue_impact": null,
        "ts": "2021-11-22T07:15:41.423649",
      },
      {
        "_id": -1200080237211081700,
        "activity": "viewed_product",
        "activity_name": "Added to Cart",
        "activity_occurrence": 3,
        "dot_color": "#FBE78C",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Product SKU",
            "value": "220",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "8f8395d1d34bda4b008b74b49d2ee0d9",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": "www.example.com/product",
          },
        ],
        "moment": "2021-11-22T12:15:41.423Z",
        "revenue_impact": null,
        "ts": "2021-11-22T07:15:41.423649",
      },
    ],
    "revenue_impact": null,
    "ts": "2021-11-22T07:15:41.423649",
  },
  {
    "_id": 4608641259827923000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 3,
    "dot_color": "#570771",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/product",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "1c822faae711a75c61d5c86b495f87b4",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/product",
      },
    ],
    "moment": "2021-11-22T12:15:40.423Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-22T07:15:40.423649",
  },
  {
    "_id": 209544437672948500,
    "activity": "started_checkout",
    "activity_name": "Started Checkout",
    "activity_occurrence": 1,
    "dot_color": "#DB7D3E",
    "features": [
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "4e36b3204cb7c8c1d153d8b5ed218e93st",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/checkout",
      },
    ],
    "moment": "2021-11-22T12:08:43.423Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-22T07:08:43.423649",
  },
  {
    "_id": 1589632135090795500,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 2,
    "dot_color": "#570771",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/checkout",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "4e36b3204cb7c8c1d153d8b5ed218e93",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/checkout",
      },
    ],
    "moment": "2021-11-22T12:08:42.423Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-22T07:08:42.423649",
  },
  {
    "_id": 407723757706450240,
    "activity": "viewed_product",
    "activity_name": "Added to Cart",
    "activity_occurrence": 2,
    "dot_color": "#FBE78C",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Product SKU",
        "value": "220",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "56c872df61798d467a15a56a8e75ae23",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": null,
      },
    ],
    "moment": "2021-11-22T12:08:41.423Z",
    "repeated_activities": [
      {
        "_id": 407723757706450240,
        "activity": "viewed_product",
        "activity_name": "Added to Cart",
        "activity_occurrence": 2,
        "dot_color": "#FBE78C",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Product SKU",
            "value": "220",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "56c872df61798d467a15a56a8e75ae23",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": null,
          },
        ],
        "moment": "2021-11-22T12:08:41.423Z",
        "revenue_impact": null,
        "ts": "2021-11-22T07:08:41.423649",
      },
      {
        "_id": 6679278993664995000,
        "activity": "viewed_product",
        "activity_name": "Added to Cart",
        "activity_occurrence": 1,
        "dot_color": "#FBE78C",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Product SKU",
            "value": "180",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "fe7318382ce956f8fedaf953bfd08e82",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Link",
            "value": "www.example.com/product",
          },
        ],
        "moment": "2021-11-22T12:08:41.423Z",
        "revenue_impact": null,
        "ts": "2021-11-22T07:08:41.423649",
      },
    ],
    "revenue_impact": null,
    "ts": "2021-11-22T07:08:41.423649",
  },
  {
    "_id": -9001046123648284000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 1,
    "dot_color": "#570771",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/product",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "56c872df61798d467a15a56a8e75ae23",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/product",
      },
    ],
    "moment": "2021-11-22T12:08:40.423Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-22T07:08:40.423649",
  },
  {
    "_id": 5006982309531143000,
    "activity": "started_session",
    "activity_name": "Started Session",
    "activity_occurrence": 1,
    "dot_color": "#46ACEF",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring domain",
        "value": "reddit",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": "mobile",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "46b808d472ba74771f015156478e3681",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "/home",
      },
    ],
    "moment": "2021-11-22T12:04:42.423Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2021-11-22T07:04:42.423649",
  },
]
`;

exports[`#makeActivitiesWithSameRecentActivities should create a list of filtered activities with repeat_activity children 1`] = `
[
  {
    "_id": -6836407041199246000,
    "activity": "employee_viewed_webpage",
    "activity_name": "Employee Viewed Webpage",
    "activity_occurrence": 1,
    "customer": "armstrong-hermann",
    "dot_color": "#6F1AD2",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Path",
        "value": "/home",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "d3ea4b343852ad1d5e03a8188a867b6b",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Page URL",
        "value": "www.narrator-demo.com/home",
      },
    ],
    "moment": "2018-01-01T00:35:34.000Z",
    "repeated_activities": [
      {
        "_id": -6836407041199246000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 1,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "d3ea4b343852ad1d5e03a8188a867b6b",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T00:35:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:35:34",
      },
      {
        "_id": 5357983960109437000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 2,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "a29e471d646f1a0156ae0f293790e779",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T00:36:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:36:34",
      },
      {
        "_id": 6825315731203969000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 3,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "b14d5a570f12e49a802aa7f2286467a4",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T00:38:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:38:34",
      },
      {
        "_id": 7308269693041849000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 4,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/careers",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "52c0babd3decad12a341a486e06e5aa7",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/careers",
          },
        ],
        "moment": "2018-01-01T00:40:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:40:34",
      },
      {
        "_id": 4658228608797189000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 5,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/solutions",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "90abb85d71902882bbcbb609a58f2070",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/solutions",
          },
        ],
        "moment": "2018-01-01T00:40:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:40:34",
      },
      {
        "_id": 3620216711842730500,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 6,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "4e55c894fba9961dbf820e21174ab667",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T00:42:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:42:34",
      },
      {
        "_id": 1420050260928389000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 7,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "c8887800f7d25e9c982e19329d03d279",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T00:42:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:42:34",
      },
      {
        "_id": -989423415755259800,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 8,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/solutions",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "7d9c168ed8dbd4888f3f12eb1bb3d16b",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/solutions",
          },
        ],
        "moment": "2018-01-01T00:44:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:44:34",
      },
      {
        "_id": 6619759807366947000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 9,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "91cf511af5fa09f71d52d2599689a03b",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T00:47:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:47:34",
      },
      {
        "_id": 1069430914399989500,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 10,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "394075523ee015135ae93bbe28b5866d",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T00:49:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:49:34",
      },
      {
        "_id": 145011115020937760,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 11,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "f41afae295cbc03faebd18aa8d3ae25e",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T00:53:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:53:34",
      },
      {
        "_id": -2655511251248654300,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 12,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "9162c3bd12d0802e674ee9bce46b3fee",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T00:56:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:56:34",
      },
      {
        "_id": 279730454197247070,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 13,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "7d6479c4daa89c8b1e2c723e203cc33f",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T00:56:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:56:34",
      },
      {
        "_id": -5111254981815372000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 14,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "4bc8ca353f6edd138af5e8de54322d2f",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T00:58:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:58:34",
      },
      {
        "_id": 7478171304264117000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 15,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/careers",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "0d65247ce77cefa0c006ed756d9ae6c5",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/careers",
          },
        ],
        "moment": "2018-01-01T00:59:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T19:59:34",
      },
      {
        "_id": -7873470157545550000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 16,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/solutions",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "f3db6bda6f6960d2e52c4949d712d18f",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/solutions",
          },
        ],
        "moment": "2018-01-01T01:00:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:00:34",
      },
      {
        "_id": -1921402662488310800,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 17,
        "customer": "armstrong-hermann",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/careers",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "9c4b8dd2aaaab4ef2bb7d20410fed7a6",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/careers",
          },
        ],
        "moment": "2018-01-01T01:01:34.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:01:34",
      },
    ],
    "revenue_impact": null,
    "ts": "2017-12-31T19:35:34",
  },
  {
    "_id": -4651031192085086000,
    "activity": "employee_viewed_webpage",
    "activity_name": "Employee Viewed Webpage",
    "activity_occurrence": 1,
    "customer": "schoen-mosciski",
    "dot_color": "#6F1AD2",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Path",
        "value": "/home",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "e5af7519e392b8ab423ba191e1f519e2",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Page URL",
        "value": "www.narrator-demo.com/home",
      },
    ],
    "moment": "2018-01-01T01:02:29.000Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2017-12-31T20:02:29",
  },
  {
    "_id": 4877241276737265000,
    "activity": "employee_viewed_webpage",
    "activity_name": "Employee Viewed Webpage",
    "activity_occurrence": 18,
    "customer": "armstrong-hermann",
    "dot_color": "#6F1AD2",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Path",
        "value": "/solutions",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "ee25a38fc14bb6b6d9b22f5891f2f380",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Page URL",
        "value": "www.narrator-demo.com/solutions",
      },
    ],
    "moment": "2018-01-01T01:02:34.000Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2017-12-31T20:02:34",
  },
  {
    "_id": -292978197746774600,
    "activity": "employee_viewed_webpage",
    "activity_name": "Employee Viewed Webpage",
    "activity_occurrence": 2,
    "customer": "schoen-mosciski",
    "dot_color": "#6F1AD2",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Path",
        "value": "/demo",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "fa098ce88c164b6dca7c55d2d1f24ddb",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Page URL",
        "value": "www.narrator-demo.com/demo",
      },
    ],
    "moment": "2018-01-01T01:05:29.000Z",
    "repeated_activities": [],
    "revenue_impact": null,
    "ts": "2017-12-31T20:05:29",
  },
  {
    "_id": -3961373363150686000,
    "activity": "employee_viewed_webpage",
    "activity_name": "Employee Viewed Webpage",
    "activity_occurrence": 3,
    "customer": "schoen-mosciski",
    "dot_color": "#6F1AD2",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Path",
        "value": "/pricing",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "58f4356220588a8fb41261dcbe45a7bf",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Page URL",
        "value": "www.narrator-demo.com/pricing",
      },
    ],
    "moment": "2018-01-01T01:11:29.000Z",
    "repeated_activities": [
      {
        "_id": -3961373363150686000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 3,
        "customer": "schoen-mosciski",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/pricing",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "58f4356220588a8fb41261dcbe45a7bf",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/pricing",
          },
        ],
        "moment": "2018-01-01T01:11:29.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:11:29",
      },
      {
        "_id": 8856009797891529000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 4,
        "customer": "schoen-mosciski",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/solutions",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "6226cc8bffe3cd3e7245eab605e80631",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/solutions",
          },
        ],
        "moment": "2018-01-01T01:13:29.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:13:29",
      },
      {
        "_id": 6401020972909144000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 5,
        "customer": "schoen-mosciski",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "6c18d7c30c8037fa01f5f9cd460d0c8c",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T01:13:29.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:13:29",
      },
      {
        "_id": -7152674133469483000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 6,
        "customer": "schoen-mosciski",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "cf710f4c2ec6c0e23736ba00c75c7d1d",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T01:16:29.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:16:29",
      },
      {
        "_id": -7183178695168878000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 7,
        "customer": "schoen-mosciski",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "d1e4d18bed2e1b038114d9b1a5cab2a7",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T01:20:29.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:20:29",
      },
      {
        "_id": 7653890150948940000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 8,
        "customer": "schoen-mosciski",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "1488da61fd0a60d6cb18c7366d175436",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T01:21:29.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:21:29",
      },
      {
        "_id": -8858759898542167000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 9,
        "customer": "schoen-mosciski",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/careers",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "45560a242629084155db667dc7af29c9",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/careers",
          },
        ],
        "moment": "2018-01-01T01:22:29.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:22:29",
      },
      {
        "_id": 1714561741662544400,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 10,
        "customer": "schoen-mosciski",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "8c71819f9464c3e8a6846266156e4a9e",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T01:23:29.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:23:29",
      },
      {
        "_id": -5766622184599234000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 11,
        "customer": "schoen-mosciski",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "dd3afd22092a42afb8166baf66c605be",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T01:24:29.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:24:29",
      },
      {
        "_id": -129923070547930030,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 12,
        "customer": "schoen-mosciski",
        "dot_color": "#6F1AD2",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "165cdf2537f157273bf599d57bc31857",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2018-01-01T01:24:29.000Z",
        "revenue_impact": null,
        "ts": "2017-12-31T20:24:29",
      },
    ],
    "revenue_impact": null,
    "ts": "2017-12-31T20:11:29",
  },
]
`;

exports[`#makeActivitiesWithSameRecentActivities should take only repeated activities and return an activity with all repeated activities 1`] = `
[
  {
    "_id": 510388303776837440,
    "activity": "employee_viewed_webpage",
    "activity_name": "Employee Viewed Webpage",
    "activity_occurrence": 3,
    "customer": "zboncak_feest_and_koss",
    "dot_color": "#BB20B9",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Path",
        "value": "/careers",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "3eb6e10a809729a1d871ec300f826158",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Page URL",
        "value": "www.narrator-demo.com/careers",
      },
    ],
    "moment": "2021-11-22T12:01:34.000Z",
    "repeated_activities": [
      {
        "_id": 510388303776837440,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 3,
        "customer": "zboncak_feest_and_koss",
        "dot_color": "#BB20B9",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/careers",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "3eb6e10a809729a1d871ec300f826158",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/careers",
          },
        ],
        "moment": "2021-11-22T12:01:34.000Z",
        "revenue_impact": null,
        "ts": "2021-11-22T07:01:34",
      },
      {
        "_id": 1707366435833704700,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 2,
        "customer": "zboncak_feest_and_koss",
        "dot_color": "#BB20B9",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "dae0b8a1d4992a73a2ea076c2ca89d2a",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2021-11-22T11:58:34.000Z",
        "revenue_impact": null,
        "ts": "2021-11-22T06:58:34",
      },
      {
        "_id": 3021783354321177000,
        "activity": "employee_viewed_webpage",
        "activity_name": "Employee Viewed Webpage",
        "activity_occurrence": 1,
        "customer": "zboncak_feest_and_koss",
        "dot_color": "#BB20B9",
        "features": [
          {
            "for_copy": false,
            "for_link": false,
            "label": "Path",
            "value": "/home",
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Source Id",
            "value": null,
          },
          {
            "for_copy": true,
            "for_link": false,
            "label": "Activity Id",
            "value": "51787cdb3f06de5e062bbed53ab10ae0",
          },
          {
            "for_copy": false,
            "for_link": true,
            "label": "Page URL",
            "value": "www.narrator-demo.com/home",
          },
        ],
        "moment": "2021-11-22T11:55:34.000Z",
        "revenue_impact": null,
        "ts": "2021-11-22T06:55:34",
      },
    ],
    "revenue_impact": null,
    "ts": "2021-11-22T07:01:34",
  },
]
`;

exports[`#momentizeActivities should add the moment column to all activities 1`] = `
[
  {
    "_id": -6266282755210350000,
    "activity": "viewed_product",
    "activity_name": "Added to Cart",
    "activity_occurrence": 3,
    "dot_color": "#F0A21D",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Product SKU",
        "value": "240",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "32ce1efdf04e16e027af5ea3d3b1c8c6",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": null,
      },
    ],
    "moment": "2021-11-01T10:59:27.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:59:27.914897",
  },
  {
    "_id": -6862073527046626000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 10,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/product",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "32ce1efdf04e16e027af5ea3d3b1c8c6",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/product",
      },
    ],
    "moment": "2021-11-01T10:59:26.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:59:26.914897",
  },
  {
    "_id": 5007573080340414000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 9,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/home",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "388a9c0bc454324a6cd829562a0a3863",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/home",
      },
    ],
    "moment": "2021-11-01T10:55:26.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:55:26.914897",
  },
  {
    "_id": 6957976457450277000,
    "activity": "started_checkout",
    "activity_name": "Started Checkout",
    "activity_occurrence": 1,
    "dot_color": "#151977",
    "features": [
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "794f821ac8344f69bff77527793fb5dfst",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/checkout",
      },
    ],
    "moment": "2021-11-01T10:54:27.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:54:27.914897",
  },
  {
    "_id": -2878034322310197000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 8,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/checkout",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "794f821ac8344f69bff77527793fb5df",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/checkout",
      },
    ],
    "moment": "2021-11-01T10:54:26.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:54:26.914897",
  },
  {
    "_id": -7316127692543178000,
    "activity": "viewed_product",
    "activity_name": "Added to Cart",
    "activity_occurrence": 2,
    "dot_color": "#F0A21D",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Product SKU",
        "value": "20",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "e9f4b26b19f407191bd2c859a738c29b",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": null,
      },
    ],
    "moment": "2021-11-01T10:54:25.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:54:25.914897",
  },
  {
    "_id": 19598251358866384,
    "activity": "viewed_product",
    "activity_name": "Added to Cart",
    "activity_occurrence": 1,
    "dot_color": "#F0A21D",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Product SKU",
        "value": "70",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "6dc2a523836fe3788cf0aa08fdf6a751",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/product",
      },
    ],
    "moment": "2021-11-01T10:54:25.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:54:25.914897",
  },
  {
    "_id": 2813883599193387000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 7,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/product",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "e9f4b26b19f407191bd2c859a738c29b",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/product",
      },
    ],
    "moment": "2021-11-01T10:54:24.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:54:24.914897",
  },
  {
    "_id": 511417195641141400,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 6,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/promo",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "5842bb0663900a4e0bbe92fd24f71f23",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/promo",
      },
    ],
    "moment": "2021-11-01T10:52:26.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:52:26.914897",
  },
  {
    "_id": 4717342921032903000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 5,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/promo",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "bfe7c673c7b61cbbe43b2416e7692ce9",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/promo",
      },
    ],
    "moment": "2021-11-01T10:52:26.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:52:26.914897",
  },
  {
    "_id": 6231407018474217000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 4,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/home",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "66d92d2bda89f0ea8821d1efc844d32c",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/home",
      },
    ],
    "moment": "2021-11-01T10:50:26.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:50:26.914897",
  },
  {
    "_id": -9179941361148418000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 3,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/home",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "0fbaee2b01ea72c51efd2eb7d75c2eeb",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/home",
      },
    ],
    "moment": "2021-11-01T10:47:26.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:47:26.914897",
  },
  {
    "_id": 4651388284614795000,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 2,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/promo",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "f60841c312370e0282a6e99f9bf12bac",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/promo",
      },
    ],
    "moment": "2021-11-01T10:46:26.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:46:26.914897",
  },
  {
    "_id": 942420535372713100,
    "activity": "viewed_page",
    "activity_name": "Viewed Website",
    "activity_occurrence": 1,
    "dot_color": "#FF6802",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": "/promo",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring Domain",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "a11ea5e01d697a6302d428e44c348807",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "www.example.com/promo",
      },
    ],
    "moment": "2021-11-01T10:39:26.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:39:26.914897",
  },
  {
    "_id": 5174973746959827000,
    "activity": "started_session",
    "activity_name": "Started Session",
    "activity_occurrence": 1,
    "dot_color": "#E3DE71",
    "features": [
      {
        "for_copy": false,
        "for_link": false,
        "label": "Ad Source",
        "value": null,
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Referring domain",
        "value": "reddit",
      },
      {
        "for_copy": false,
        "for_link": false,
        "label": "Device",
        "value": "desktop",
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Source Id",
        "value": null,
      },
      {
        "for_copy": true,
        "for_link": false,
        "label": "Activity Id",
        "value": "095f6014de3692b0f4841d7a152b5c27",
      },
      {
        "for_copy": false,
        "for_link": true,
        "label": "Link",
        "value": "/product",
      },
    ],
    "moment": "2021-11-01T10:31:26.914Z",
    "revenue_impact": null,
    "ts": "2021-11-01T06:31:26.914897",
  },
]
`;
